# SearchEngine

./: .gitignore  CMakeLists.txt  InvertedIndex.cpp  InvertedIndex.h  SearchServer.cpp  SearchServer.h  TestConverterJSON.cpp  TestSearchServer.cpp  answers.json  config.json  converterJSON.cpp  converterJSON.h  main.cpp  request.json
resources/: file001.txt  file002.txt  file003.txt  file004.txt
test/: CMakeLists.txt  TestConverterJSON.cpp  TestInvertedIndex.cpp  TestSearchServer.cpp  test.cpp
